Correct index.php with includes, default font, text change

--- a/app/assets/sass/styles.scss
+++ b/app/assets/sass/styles.scss
@@ -1,14 +1,19 @@
+/**
+ * Load all your style sheets here
+ */
+
+//@import "partials/some-file";
+
 /* 
     Default styles
 */
-
 body{
   display: flex;
   flex-direction: column;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   min-height: 100vh;
 }
 
 img{
   max-width: 100%;
 }
-
