--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -2,6 +2,11 @@
 
 {% block content %}
 
-Hello world!
+<h1>
+  SlimPHP Kickstarter
+</h1>
+<p>
+  Edit me in /app/templates/index.twig
+</p>
 
 {% endblock %}
