Default page name included

--- a/app/templates/layouts/default.twig
+++ b/app/templates/layouts/default.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8"/>
-  <title>{% if title %} {{ title|e }} - {% endif %}</title>
+  <title>{% if title %} {{ title|e }} - {% endif %} SlimPHP Kickstarter</title>
   {% if noindex %}<meta name="robots" content="noindex">{% endif %}
   {% if metaDesc  %}<meta name="description" content="{{ metaDesc|e }}">{% endif %}
   {% if not appInProduction %}
